--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>crave_Mart</title>
   </head>
   <body>
-    <div id="root" class="p-5 font-Poppins"></div>
+    <div id="root" class="py-2 px-5 font-Poppins"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
