feat - food display and food item

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>crave_Mart</title>
   </head>
   <body>
-    <div id="root" class="py-2 px-5 font-Poppins"></div>
+    <div id="root" class="py-2 px-5 font-Poppins w-5/6 mx-auto"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
