--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>crave_Mart</title>
   </head>
   <body>
-    <div id="root" class="py-2 px-5 font-Poppins md:w-5/6 w-full mx-auto scroll-smooth"></div>
+    <div id="root" class="font-Poppins md:px-12 px-7 py-0 w-full mx-auto scroll-smooth"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
